[feat]居中方式汇总测试

--- a/vueTest/src/scss/_variable.scss
+++ b/vueTest/src/scss/_variable.scss
@@ -23,6 +23,6 @@ $gColor-text: #333333;//黑色rgb(51,51,51)
 $gColor-text-main: #ffffff;//白色rgb(255,255,255)
 
 //阴影色-分割
-$gColor-shadow: #A0A0A0;//灰色rgb(160,160,160)
-$gColor-shadow-light: #F0F0F0;//浅灰色rgb(240,240,240)
-$gColor-shadow-dark: #5B5B5B;//深灰色rgb(91,91,91)
+$gColor-gray: #A0A0A0;//灰色rgb(160,160,160)
+$gColor-gray-light: #F0F0F0;//浅灰色rgb(240,240,240)
+$gColor-gray-dark: #5B5B5B;//深灰色rgb(91,91,91)
