--- a/vueTest/src/plugin/dialog/dialog.scss
+++ b/vueTest/src/plugin/dialog/dialog.scss
@@ -35,7 +35,7 @@
     justify-content: center;
   }
   .box-bottom{
-    border-top: 1px solid $gColor-shadow;
+    border-top: 1px solid $gColor-gray;
     width: 100%;
     height: 2.3rem;
     @include display(flex);
