[refactor]dialog统一改名为msgBox。因为用dialog会弹出警告，应该是dialog是保留关键字或新增标签等

--- a/vueTest/src/plugin/msgBox/msgBox.scss
+++ b/vueTest/src/plugin/msgBox/msgBox.scss
@@ -1,6 +1,6 @@
 @import '~scss/_mixin.scss';
 @import '~scss/_variable.scss';
-.module-dialog{
+.module-msgBox{
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
